src/crode/test/invalid/invalidShapeParameter.crode
canvas "InvalidShapeParameter" width 800 height 600 {
  let snowflake = circle {
    radius 5
    color black
  }

  let bad = circle {
    radius snowflake
    color black
  }

  draw bad at (100, 100)
}
